<resources>
    <string name="app_name">Just Java</string>
    <string name="order_text">order</string>
    <string name="topping">Toppings</string>
    <string name="wipped_cream">Wipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">"Quantity "</string>
    <string name="order_summary">Order Summary</string>
    <string name="thank_you">Thank you!</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="add_wipped_cream">Add wipped cream?</string>
    <string name="total_price">"Total: $ "</string>
    <string name="name_user">Name:</string>
    <string name="order_for_user">Just Java order for</string>

</resources>
