<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Name"
                android:inputType="textCapWords" />

            <TextView
                style="@style/CustomText"
                android:text="@string/topping" />

            <CheckBox
                android:id="@+id/wipped_cream_checkbox"
                style="@style/CheckBoxText"
                android:text="@string/wipped_cream"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                style="@style/CheckBoxText"
                android:text="@string/chocolate"
                android:textSize="16sp" />

            <TextView
                style="@style/CustomText"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="2"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/order_summary"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="$0"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:text="@string/order_text"
                android:textAllCaps="true" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
